# one_arm_juggling

./: .gitignore  Camera_perpetual_motion_machine.ipynb  Jug_N_balls.ipynb  Jug_N_balls_perception.ipynb  Jug_N_balls_small.ipynb  Jug_N_balls_video.ipynb  Jug_N_balls_w_warmup.ipynb  Jug_with_Catch_Update-2.ipynb  Jug_with_Catch_Update-TCT.ipynb  Jug_with_Catch_Update.ipynb  Jug_with_Catch_no_Update.ipynb  PERCEPTION perpetual_motion_machine-2.ipynb  PERCEPTION perpetual_motion_machine-Shao Fixed.ipynb  PERCEPTION perpetual_motion_machine.ipynb  PERCEPTION_ball_pos_vel_test_inverse_dynamics_controller.ipynb  Perception_Jug_with_Catch_Update-TCT.ipynb  README.md  ball_drop.ipynb  ball_pos_vel_test-3SY-2.ipynb  ball_pos_vel_test-3SY-ctct.ipynb  ball_pos_vel_test.ipynb  ball_pos_vel_test_idc_adjusting.ipynb  ball_pos_vel_test_idc_spatial-constraint-2.ipynb  ball_pos_vel_test_inverse_dynamics_controller-2.ipynb  ball_pos_vel_test_inverse_dynamics_controller-3.ipynb  ball_pos_vel_test_inverse_dynamics_controller-4.ipynb  ball_pos_vel_test_inverse_dynamics_controller-spatial-constraint.ipynb  ball_pos_vel_test_inverse_dynamics_controller.ipynb  ball_pos_vel_vertical_window_test.ipynb  ball_throwing_catching-test.ipynb  ball_throwing_catching.ipynb  ball_trajectory_experiments.ipynb  bug_joint_vel_const_not_satisfied.ipynb  bug_traj_eval_derivative.ipynb  catching_test.ipynb  diff_ik_adjuster.py  differential_inverse_calculator-2.ipynb  differential_inverse_calculator-3.ipynb  differential_inverse_calculator.ipynb  hacky_perpetual_motion_machine.ipynb  (+13 more)
models/: ball.sdf  table.sdf  (+7 more)
(+8 files in other folders)
