[metadata]
name = robot_juggler
version = 2022.10.24
author = Richard Li, David Jin, Shao Yuan Chew Chia
author_email = shaoyuan@mit.edu
description = MIT 6.4210 - Robotic Manipulation Final Project
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
include_package_data = True
packages = find:
python_requires = >=3.8